# meeting_transcripts_cleaner

./: .env.example  .gitignore  CLAUDE.md  DESCRIPTION.md  README.md  REFACTORING_PLAN.md  Streamlit Deployment: Monolith vs. Decoupled.md  claude_prompts.md  config.py  config.yaml  docker-compose.yml  infographic.html  justfile  pyproject.toml  pytest.ini  spcs-service-spec.yaml  streamlit_app.py  target_design.md  test_meeting.vtt
.streamlit/: config.toml
agents/: __init__.py
agents/extraction/: __init__.py  insights.py
agents/synthesis/: __init__.py  direct.py  hierarchical.py
agents/transcript/: __init__.py  cleaner.py  reviewer.py
app/: app.py  config.py  state.py
app/components/: cleanse_options.py  common.py  file_upload.py  intelligence.py  layout.py  metrics.py  review.py  transcript_display.py
app/services/: __init__.py  pipeline.py  runtime.py
app/utils/: __init__.py  exports.py  files.py  state_transformers.py
backend/: .env.example  Dockerfile  config.py  main.py
backend/agents/: __init__.py
backend/agents/extraction/: __init__.py  insights.py
backend/agents/synthesis/: __init__.py  direct.py  hierarchical.py  segment.py
backend/agents/transcript/: __init__.py  cleaner.py  reviewer.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  background_tasks.py  dependencies.py  endpoints.py  schemas.py
backend/application/ports/: protocols.py
backend/application/services/: intelligence_processor.py  transcript_processor.py
backend/core/: __init__.py  task_cache.py
backend/domain/entities/: transcript_document.py
backend/domain/value_objects/: confidence.py  duration.py
backend/infrastructure/: factories.py
backend/infrastructure/repositories/: task_repository.py
backend/infrastructure/strategies/: insight_extraction_strategy.py  intelligence_synthesis_strategy.py  semantic_chunking_strategy.py
backend/integrations/: __init__.py  factories.py
backend/intelligence/: __init__.py  chunker.py  intelligence_orchestrator.py  models.py  processor.py  protocols.py  target_design.md
backend/intelligence/agents/: __init__.py  aggregation.py  chunk.py  direct.py  extractor.py  hierarchical.py  insights.py  segment.py  synthesizer.py
backend/intelligence/aggregation/: __init__.py  aggregator.py
backend/intelligence/chunk_processing/: __init__.py  processor.py
backend/intelligence/strategies/: __init__.py  extraction.py  synthesis.py
backend/intelligence/validation/: __init__.py  validator.py
backend/models/: __init__.py  intelligence.py  transcript.py
backend/services/: __init__.py
backend/services/orchestration/: __init__.py  intelligence_orchestrator.py
backend/shared/: config.py
backend/tasks/: __init__.py  cache.py  cache_duckdb.py  models.py  protocols.py  repository.py
backend/tests/: test_api_simplified.py  test_task_cache.py
backend/transcript/: __init__.py  models.py  parser.py  processor.py  protocols.py
backend/utils/: __init__.py  model_settings.py  semantic_chunker.py
backend_service/: Dockerfile  config.py  main.py
backend_service/agents/: __init__.py
backend_service/api/: __init__.py
backend_service/core/: __init__.py  task_cache.py  vtt_processor.py
backend_service/models/: intelligence.py  transcript.py
backend_service/repositories/: __init__.py  base.py  duckdb_repository.py  factory.py
backend_service/services/: __init__.py  transcript_service.py
backend_service/tests/: test_api_simplified.py  test_task_cache.py
backend_service/utils/: semantic_chunker.py
core/: __init__.py  ai_agents.py  cleaning_agent.py  confidence_categorizer.py  document_processor.py  intelligence_agents.py  review_agent.py  vtt_processor.py
data/: test_analytics.duckdb  test_concurrent.duckdb  transcript.vtt
docs/: ideas.md  implementation_guide.md  system_design.md
docs/design/: meeting-intelligence-system.md  sdd_action_item_agent.md  sdd_search_qa_agent.md  sdd_summary_agent.md
examples/files/: meeting_note.txt  quarterly_review_meeting.vtt  teams_meeting_errors_hour_long.vtt  teams_meeting_realistic.vtt  transcript.vtt
examples/prompts/: meeting_notes_cleaning_prompt.md  meeting_transcript_cleaning_prompt.md
frontend/: Dockerfile  api_client.py  config.py  main.py
frontend/components/: __init__.py  error_display.py  export_handlers.py  health_check.py  metrics_display.py  progress_tracker.py
frontend/pages/: 1_📤_Upload_Process.py  2_👀_Review.py  3_🧠_Intelligence.py  4_🔧_Debug.py
frontend/services/: __init__.py  backend_service.py  pipeline.py  runtime.py  state_service.py  task_service.py
frontend/utils/: __init__.py  constants.py  helpers.py  ui_components.py
models/: __init__.py  agents.py  intelligence.py  schemas.py  simple_intelligence.py  vtt.py
pages/: 1_📤_Upload_Process.py  2_👀_Review.py  3_⚙️_Settings.py  3_🧠_Intelligence.py
prompts/: __init__.py  cleaning.py  review.py
scripts/: openai_api_test.py
services/: __init__.py  chunk_processor.py  intelligence_service.py  simple_intelligence_service.py  topic_synthesizer.py  transcript_service.py
services/extraction/: __init__.py  chunk_extractor.py  topic_clusterer.py
services/orchestration/: intelligence_orchestrator.py
services/synthesis/: __init__.py  intelligence_synthesizer.py
services/transcript/: __init__.py  cleaning_service.py  review_service.py
shared/: __init__.py  config.py  types.py
shared/services/: __init__.py  pipeline.py  runtime.py
shared/utils/: exports.py  files.py  time_formatters.py
tests/: __init__.py  conftest.py  test_accuracy_optional.py  test_ai_agents.py  test_diff_viewer.py  test_document_diff_viewer.py  test_essential.py  test_intelligence.py  test_processing_pipeline.py  test_simple_intelligence.py  test_transcript_service.py  test_vtt_models.py  test_vtt_processor.py
tests/backend/: __init__.py  test_api.py
tests/frontend/: __init__.py  test_api_client.py
tests/integration/: __init__.py  test_end_to_end.py
uploads/: test_transcript.txt
utils/: config_manager.py  diff_viewer.py  document_diff_viewer.py  semantic_chunker.py  ui_components.py  validators.py
(+39 files in other folders)
